# store-manager

./: .gitignore  LICENSE  README.md
.github/: pull_request_template.md
backend/: README.md  pyproject.toml
backend/accounts/: serializers.py  urls.py  views.py
backend/movements/: admin.py  models.py  serializers.py  urls.py  views.py
backend/movements/migrations/: 0001_initial.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_product_description.py  0003_productcategory_product_category.py
backend/storemanager/: asgi.py  settings.py  urls.py  wsgi.py
database/: README.md
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/components/: SelectIcon.vue  TableEmpty.vue  ViewHeader.vue
frontend/src/components/layouts/: LayoutFooter.vue
frontend/src/layouts/: LayoutFooter.vue  LayoutNav.vue
frontend/src/stores/: categorie.ts  categories.ts  products.ts  transactions.ts
frontend/src/views/accounts/: LoginForm.vue
frontend/src/views/categories/: CategoryDetail.vue  CategoryList.vue  interfaces.ts
frontend/src/views/dashboards/: DashboardIndex.vue
frontend/src/views/products/: ProductDetail.vue  ProductList.vue  interfaces.ts
frontend/src/views/transactions/: TransactionDetail.vue  TransactionList.vue  interfaces.ts
