[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = "The web api back for the store manager"
authors = ["Felipe Brum <fbrump@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
